--- a/docs/locale/es/LC_MESSAGES/about/credits.po
+++ b/docs/locale/es/LC_MESSAGES/about/credits.po
@@ -6,6 +6,7 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,10 +41,10 @@ msgid ""
 msgstr ""
 "La primera versión beta del Estándar de Datos sobre Beneficiarios Finales "
 "fue desarrollada por Tim Davies (`Open Data Services Co-operative "
-"<http://www.opendataservices.coop>`_) con Ben Symonds (`OpenCorporates "
-"<http://www.opencorporates.com>`_), Chris Taggart (`OpenCorporates "
-"<http://www.opencorporates.com>`_) y Jack Lord (`Open Data Services Co-"
-"operative <http://www.opendataservices.coop>`_), y contó con el apoyo del "
+"<http://www.opendataservices.coop>`__) con Ben Symonds (`OpenCorporates "
+"<http://www.opencorporates.com>`__), Chris Taggart (`OpenCorporates "
+"<http://www.opencorporates.com>`__) y Jack Lord (`Open Data Services Co-"
+"operative <http://www.opendataservices.coop>`__), y contó con el apoyo del "
 ":doc:`grupo de trabajo sobre estándares de datos <governance>`."
 
 # f1105f4b0a7e40cd8326f0f70432d38e
